--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="menu-list">
               <li class="menu-items"><a href="#first">Intro</a></li>
               <li class="menu-items"><a href="#second">About</a></li>
-              <li class="menu-items"><a href="#third">Shop</a></li>
+              <li class="menu-items"><a href="#products">Shop</a></li>
           </ul>
           <div id="cart-btn">
               <img src="./project_files/images/cart.svg" alt="cart-logo"> 
