--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h1 id="total"></h1>
         </div>
         <div class="checkout_btn">
-            <button class="ctn">Continue Shopping</button>
+            <button class="ctn">Continue shopping</button>
             <button class="checkout">Checkout</button>
         </div>
     </div>
